docs/apache-airflow-providers-amazon/9.0.0/_sources/_api/airflow/providers/amazon/aws/hooks/bedrock/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.hooks.bedrock`
====================================================

.. py:module:: airflow.providers.amazon.aws.hooks.bedrock


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.bedrock.BedrockHook
   airflow.providers.amazon.aws.hooks.bedrock.BedrockRuntimeHook
   airflow.providers.amazon.aws.hooks.bedrock.BedrockAgentHook
   airflow.providers.amazon.aws.hooks.bedrock.BedrockAgentRuntimeHook




.. py:class:: BedrockHook(*args, **kwargs)


   Bases: :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   Interact with Amazon Bedrock.

   Provide thin wrapper around :external+boto3:py:class:`boto3.client("bedrock") <Bedrock.Client>`.

   Additional arguments (such as ``aws_conn_id``) may be specified and
   are passed down to the underlying AwsBaseHook.

   .. seealso::
       - :class:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   .. py:attribute:: client_type
      :value: 'bedrock'

      


.. py:class:: BedrockRuntimeHook(*args, **kwargs)


   Bases: :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   Interact with the Amazon Bedrock Runtime.

   Provide thin wrapper around :external+boto3:py:class:`boto3.client("bedrock-runtime") <BedrockRuntime.Client>`.

   Additional arguments (such as ``aws_conn_id``) may be specified and
   are passed down to the underlying AwsBaseHook.

   .. seealso::
       - :class:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   .. py:attribute:: client_type
      :value: 'bedrock-runtime'

      


.. py:class:: BedrockAgentHook(*args, **kwargs)


   Bases: :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   Interact with the Amazon Agents for Bedrock API.

   Provide thin wrapper around :external+boto3:py:class:`boto3.client("bedrock-agent") <AgentsforBedrock.Client>`.

   Additional arguments (such as ``aws_conn_id``) may be specified and
   are passed down to the underlying AwsBaseHook.

   .. seealso::
       - :class:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   .. py:attribute:: client_type
      :value: 'bedrock-agent'

      


.. py:class:: BedrockAgentRuntimeHook(*args, **kwargs)


   Bases: :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   Interact with the Amazon Agents for Bedrock API.

   Provide thin wrapper around :external+boto3:py:class:`boto3.client("bedrock-agent-runtime") <AgentsforBedrockRuntime.Client>`.

   Additional arguments (such as ``aws_conn_id``) may be specified and
   are passed down to the underlying AwsBaseHook.

   .. seealso::
       - :class:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   .. py:attribute:: client_type
      :value: 'bedrock-agent-runtime'

      


